# endstone-staffgui

./: LICENSE  README.md
endstone-staffgui/: pyproject.toml
endstone-staffgui/src/endstone_staffgui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
endstone-staffgui/src/staffgui/: __init__.py  plugin.py
