[project]
name = "endstone-staffgui"
version = "0.1.0"
description = "Staff GUI and commands plugin for GroupChat"
requires-python = ">=3.9"
dependencies = [
    "endstone>=0.11.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.entry-points.endstone]
staffgui = "staffgui.plugin:StaffGUIPlugin"

[tool.setuptools.packages.find]
where = ["src"]